# PhoneBook

./: CMakeLists.txt  README.md
proto/: phone_book.proto
python/: PhoneBook_client.py  phone_book_pb2.py  phone_book_pb2.pyi  phone_book_pb2_grpc.py
src/: PhoneBook_server.cpp
